Working on chapter03

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -180,42 +180,56 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2024}
 }
 
-@ARTICLE{vsupalov,
+@misc{JWToauth,
+    author = {Truong Bui},
+    title = {{JWT Authentication and Authorization with Spring Boot 3 and Spring Security 6}},
+    note = {\url{https://medium.com/@truongbui95/jwt-authentication-and-authorization-with-spring-boot-3-and-spring-security-6-2f90f9337421} [dostęp dnia 23 listopada 2024]},
+    year = {2023}
+}
+
+@misc{vsupalov,
     author = {vsupalov},
     title = {{Should You Run Your Database in Docker?}},
     note = {\url{https://vsupalov.com/database-in-docker/} [dostęp dnia 25 lipca 2024]},
     year = {2024}
 }
 
-@ARTICLE{n_tier_medium,
+@misc{n_tier_medium,
     author = {Ege Karataş},
     title = {{Should You Run Your Database in Docker?}},
     note = {\url{https://medium.com/@segekaratas/understanding-n-tier-architecture-building-robust-and-scalable-applications-62db30a40b5} [dostęp dnia 25 lipca 2024]},
     year = {2023}
 }
 
-@ARTICLE{EARTHLY,
+@misc{EARTHLY,
     author = {Aveek Das},
     title = {{Using Docker with Postgres: Tutorial and Best Practices}},
-    note = {\url{https://earthly.dev/blog/postgres-docker/} [dostęp dnia 11 lipca 2023]},
+    note = {\url{https://earthly.dev/blog/postgres-docker/} [dostęp dnia 11 lipca 2024]},
     year = {2024}
 }
 
-@ARTICLE{DB_FIRST_VS_CODE_FIRST_1,
+@misc{acl,
+    author = {Wikipedia},
+    title = {{Access-control list}},
+    note = {\url{https://pl.wikipedia.org/wiki/Access-control_list} [dostęp dnia 23 listopada 2024]},
+    year = {2024}
+}
+
+@misc{DB_FIRST_VS_CODE_FIRST_1,
 	author = {Tymoteusz Kęstowicz},
     title = {{EF w podejściu Database First vs Code First – co wybrać?}},
     note = {\url{https://tymoteuszkestowicz.com/2014/03/ef-w-podejsciu-database-first-vs-code-first-co-wybrac/} [dostęp dnia 20 listopada 2024]},
     year = {2014}
 }
 
-@ARTICLE{DB_FIRST_VS_CODE_FIRST_2,
+@misc{DB_FIRST_VS_CODE_FIRST_2,
 	author = {Younes Belouche},
     title = {{Code First Approach vs. Database First Approach}},
     note = {\url{https://medium.com/codex/code-first-approach-vs-database-first-approach-a3830c0cc9b6} [dostęp dnia 20 listopada 2024]},
     year = {2023}
 }
 
-@ARTICLE{CODE_FIRST,
+@misc{CODE_FIRST,
 	author = {Saurabh Gour},
     title = {{Code First Approach vs. Database First Approach}},
     note = {\url{https://medium.com/swlh/code-first-database-design-and-development-using-jpa-hibernate-flway-fastnate-and-spring-boot-3ede35b403a6} [dostęp dnia 20 listopada 2024]},
