--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -19,4 +19,9 @@
   \item [JPA] (ang.\ \emph{Java Persistence API})
   \item [UI] (ang.\ \emph{User Interface})
   \item [SEO] (ang.\ \emph{Search Engine Optimization})
+  \item [CORS] (ang.\ \emph{Cross-Origin Resource Sharing})
+  \item [CSRF / XSRF] (ang.\ \emph{Cross-site request forgery})
+  \item [JWT] (ang.\ \emph{JSON Web Token})
+  \item [MFA] (ang.\ \emph{Multi-Factor Authentication})
+  \item [ACL] (ang.\ \emph{Access-Control List})
 \end{description}
