working on chapter03: documets

--- a/Dyplom/dokumentacja.bib
+++ b/Dyplom/dokumentacja.bib
@@ -243,6 +243,65 @@ abstract = "Automatic error-correction m natural language processing is based on
     year = {2023}
 }
 
+@misc{dms,
+    author = {Comarch},
+    title = {{Systemy DMS: Jak nowocześnie zarządzać dokumentami?}},
+    note = {\url{https://bulldogjob.pl/readme/systemy-dms-nowoczesne-zarzadzanie-dokumentami} [dostęp dnia 23 listopada 2024]},
+    year = {2024}
+}
+
+@misc{szyrowanie_danych,
+    author = {Łukasz Michałek},
+    title = {{Czym jest szyfrowanie danych i dlaczego jest tak ważne?}},
+    note = {\url{https://koszarytradingu.com/pl/czym-jest-szyfrowanie-danych/} [dostęp dnia 23 listopada 2024]},
+    year = {2023}
+}
+
+@misc{acl_2,
+    author = {TECHWATCH.DE},
+    title = {{Zrozumienie list kontroli dostępu (ACL) – obszerny przewodnik dla entuzjastów technologii}},
+    note = {\url{https://techwatch.de/pl/blog/Zrozumienie-list-kontroli-dost%C4%99pu-to-kompleksowy-przewodnik-dla-entuzjast%C3%B3w-technologii/} [dostęp dnia 23 listopada 2024]},
+    year = {2023}
+}
+
+@misc{szyrowanie_danych_2,
+    author = {gov.pl},
+    title = {{Szyfrowanie informacji}},
+    note = {\url{https://www.gov.pl/web/baza-wiedzy/szyfrowanie-informacji} [dostęp dnia 23 listopada 2024]},
+    year = {2023}
+}
+
+@misc{kotntrola_wersji,
+    author = {QMStorm},
+    title = {{Zarządzanie dokumentacją — na czym polega i jak wygląda w praktyce?}},
+    note = {\url{https://qmstorm.com/zarzadzanie-dokumentacja-na-czym-polega/} [dostęp dnia 23 listopada 2024]},
+    year = {2024}
+}
+
+
+@misc{rodo_dokumenty,
+    author = {QMStorm},
+    title = {{Czy zgodnie z RODO szyfrowanie danych jest obowiązkowe?}},
+    note = {\url{https://poradnikprzedsiebiorcy.pl/-czy-zgodnie-z-rodo-szyfrowanie-danych-jest-obowiazkowe} [dostęp dnia 23 listopada 2024]},
+    year = {2023}
+}
+
+
+@misc{django_guardian,
+    author = {Poradnik przedsiębiorcy},
+    title = {{Customizing authentication in Django}},
+    note = {\url{https://docs.djangoproject.com/en/5.1/topics/auth/customizing/#handling-object-permissions} [dostęp dnia 23 listopada 2024]},
+    year = {2024}
+}
+
+@misc{workflow_utomation,
+    author = {DocWay},
+    title = {{Elektroniczny obieg dokumentów i workflow – wszystko co musisz wiedzieć}},
+    note = {\url{https://docway.pl/blog/elektroniczny-obieg-dokumentow/} [dostęp dnia 23 listopada 2024]},
+    year = {2022}
+}
+
+
 @booklet{Marcin,
 title = {{BPMN Notacja modelowania procesów biznesowych}},
 author = {Moś, M.},
