--- a/Dyplom/skroty.tex
+++ b/Dyplom/skroty.tex
@@ -24,4 +24,5 @@
   \item [JWT] (ang.\ \emph{JSON Web Token})
   \item [MFA] (ang.\ \emph{Multi-Factor Authentication})
   \item [ACL] (ang.\ \emph{Access-Control List})
+  \item [DMS] (ang.\ \emph{Document management system})
 \end{description}
